--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Joel Peltonen Codes</title>
         <style>
             * {
                 box-sizing: border-box;
@@ -187,16 +187,12 @@
             </section>
             <div class="spacer"></div>
             <div class="spacer"></div>
+            <div class="spacer"></div>
             <section class="third">
                 <!-- <h3>I do</h3> -->
-                <a href="https://www.linkedin.com/in/joel-peltonen/">
-                    <img src="li.png" alt="LinkedIn logo" width="10%">
-                </a>
-                <a href="https://github.com/req">
-                    <img src="gh.png"  alt="GitHub logo" width="10%">
-                </a>
+                <a href="https://www.linkedin.com/in/joel-peltonen/"><img src="li.png" alt="LinkedIn logo" width="10%"></a>
+                <a href="https://github.com/req"><img src="gh.png"  alt="GitHub logo" width="10%"></a>
             </section>
-            <div class="spacer"></div>
             <div class="spacer"></div>
         </div>
 
