Improve code style

--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description"
+            content="The website for Joel Peltonen, a Finnish software generalist living in Germany.">
         <title>Joel Peltonen Codes</title>
         <style>
             * {
@@ -15,6 +17,7 @@
                 font-family: name;
                 src: url(./fonts/GlacialIndifference-Regular.woff2);
             }
+
             @font-face {
                 font-family: namebold;
                 src: url(./fonts/GlacialIndifference-Bold.woff);
@@ -24,6 +27,7 @@
                 --color-primary: #000;
                 --color-secondary: hsl(150, 66.7%, 80%);
             }
+
             ::selection {
                 background: var(--color-primary);
                 color: var(--color-secondary);
@@ -65,6 +69,7 @@
 
                 &.hardskills {
                     margin: 0 auto;
+
                     div {
                         background: #fff;
                         color: #000;
@@ -80,11 +85,26 @@
             }
 
             @media (max-width: 690px) {
-                .wrapper { margin: 0; max-width:100% }
-                h1 { font-size: 12.5vw; }
-                h2 { font-size: 7vw; }
-                h3 { font-size: 6vw; }
-                div { font-size: 5vw; }
+                .wrapper {
+                    margin: 0;
+                    max-width: 100%
+                }
+
+                h1 {
+                    font-size: 12.5vw;
+                }
+
+                h2 {
+                    font-size: 7vw;
+                }
+
+                h3 {
+                    font-size: 6vw;
+                }
+
+                div {
+                    font-size: 5vw;
+                }
             }
         </style>
     </head>
@@ -123,7 +143,7 @@
 
             <section class="links">
                 <a href="https://www.linkedin.com/in/joel-peltonen/"><img src="li.png" alt="LinkedIn logo" width="84px"></a>
-                <a href="https://github.com/req"><img src="gh.png"  alt="GitHub logo" width="84px"></a>
+                <a href="https://github.com/req"><img src="gh.png" alt="GitHub logo" width="84px"></a>
             </section>
         </div>
 
