Improve background image separation

--- a/web/index.html
+++ b/web/index.html
@@ -147,7 +147,7 @@
         </div>
 
         <style>
-            body {
+            .wrapper {
                 background: url(bg.jpg);
                 background-size: cover;
             }
