--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
             @font-face {
                 font-family: name;
-                src: url(./fonts/GlacialIndifference-Regular.woff2);
+                src: url(./assets/fonts/GlacialIndifference-Regular.woff2);
             }
 
             @font-face {
                 font-family: namebold;
-                src: url(./fonts/GlacialIndifference-Bold.woff);
+                src: url(./assets/fonts/GlacialIndifference-Bold.woff);
             }
 
             :root {
@@ -141,14 +141,14 @@
             </section>
 
             <section class="links">
-                <a href="https://www.linkedin.com/in/joel-peltonen/"><img src="li.png" alt="LinkedIn logo" width="84px"></a>
-                <a href="https://github.com/req"><img src="gh.png" alt="GitHub logo" width="84px"></a>
+                <a href="https://www.linkedin.com/in/joel-peltonen/"><img src="assets/li.png" alt="LinkedIn logo" width="84px"></a>
+                <a href="https://github.com/req"><img src="assets/gh.png" alt="GitHub logo" width="84px"></a>
             </section>
         </div>
 
         <style>
             .wrapper {
-                background: url(bg.jpg);
+                background: url(assets/bg.jpg);
                 background-size: cover;
             }
         </style>
