Add gradient layer to wrapper

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         <style>
             .wrapper {
-                background: url(assets/bg.jpg);
+                background: linear-gradient(30deg, #0008, #0000, #0008), url(assets/bg.jpg);
                 background-size: cover;
             }
         </style>
